# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginRequest"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.LoginRequest"
                         }
                     }
                 ],
@@ -37,25 +37,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_infrastructure_jwt.TokenPair"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_infrastructure_auth_jwt.TokenPair"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     }
                 }
@@ -81,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LogoutRequest"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.LogoutRequest"
                         }
                     }
                 ],
@@ -92,10 +86,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     }
                 }
@@ -121,7 +112,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RefreshRequest"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.RefreshRequest"
                         }
                     }
                 ],
@@ -129,25 +120,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_infrastructure_jwt.TokenPair"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_infrastructure_auth_jwt.TokenPair"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     }
                 }
@@ -173,7 +158,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterRequest"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.RegisterRequest"
                         }
                     }
                 ],
@@ -181,25 +166,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_infrastructure_jwt.TokenPair"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_infrastructure_auth_jwt.TokenPair"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     }
                 }
@@ -242,19 +221,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     }
                 }
@@ -290,7 +263,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_domain_user.UpdateProfileInput"
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler_user_dto.UpdateProfileRequest"
                         }
                     }
                 ],
@@ -304,19 +277,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     },
                     "403": {
                         "description": "Forbidden",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse"
                         }
                     }
                 }
@@ -324,64 +291,6 @@
         }
     },
     "definitions": {
-        "dto.LoginRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.LogoutRequest": {
-            "type": "object",
-            "required": [
-                "refresh_token"
-            ],
-            "properties": {
-                "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.RefreshRequest": {
-            "type": "object",
-            "required": [
-                "refresh_token"
-            ],
-            "properties": {
-                "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.RegisterRequest": {
-            "type": "object",
-            "required": [
-                "display_name",
-                "email",
-                "password"
-            ],
-            "properties": {
-                "display_name": {
-                    "type": "string",
-                    "minLength": 1
-                },
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 8
-                }
-            }
-        },
         "github_com_vladgrskkh_onerep-auth_internal_domain_auth.Gender": {
             "type": "string",
             "enum": [
@@ -421,12 +330,103 @@
                 }
             }
         },
-        "github_com_vladgrskkh_onerep-auth_internal_domain_user.UpdateProfileInput": {
+        "github_com_vladgrskkh_onerep-auth_internal_handler.ErrorDetail": {
             "type": "object",
             "properties": {
-                "avatar_url": {
+                "code": {
                     "type": "string"
                 },
+                "message": {
+                    "type": "string"
+                },
+                "type": {
+                    "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorType"
+                },
+                "user_message": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_vladgrskkh_onerep-auth_internal_handler.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_handler.ErrorDetail"
+                }
+            }
+        },
+        "github_com_vladgrskkh_onerep-auth_internal_handler.ErrorType": {
+            "type": "string",
+            "enum": [
+                "user_error",
+                "system_error"
+            ],
+            "x-enum-varnames": [
+                "ErrorTypeUser",
+                "ErrorTypeSystem"
+            ]
+        },
+        "github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.LogoutRequest": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.RefreshRequest": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_vladgrskkh_onerep-auth_internal_handler_auth_dto.RegisterRequest": {
+            "type": "object",
+            "required": [
+                "display_name",
+                "email",
+                "password"
+            ],
+            "properties": {
+                "display_name": {
+                    "type": "string",
+                    "minLength": 1
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8
+                }
+            }
+        },
+        "github_com_vladgrskkh_onerep-auth_internal_handler_user_dto.UpdateProfileRequest": {
+            "type": "object",
+            "properties": {
                 "birth_date": {
                     "type": "string"
                 },
@@ -434,11 +434,11 @@
                     "type": "string"
                 },
                 "gender": {
-                    "$ref": "#/definitions/github_com_vladgrskkh_onerep-auth_internal_domain_auth.Gender"
+                    "type": "string"
                 }
             }
         },
-        "github_com_vladgrskkh_onerep-auth_internal_infrastructure_jwt.TokenPair": {
+        "github_com_vladgrskkh_onerep-auth_internal_infrastructure_auth_jwt.TokenPair": {
             "type": "object",
             "properties": {
                 "access_token": {
